--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
     "scripts": {
         "start": "nodemon index"
     },
+    "engines": {
+        "node": ">=14 <15"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
